--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -1,3 +1,12 @@
+body {
+  margin: 0;
+}
+
+header {
+  max-width: 1280px;
+  margin: 0 auto;
+}
+
 html {
   max-width: 1440px;
   margin: 0 auto;
@@ -34,6 +43,6 @@ html {
 @font-face {
   font-family: 'PoppinsExtraBold';
   src: local('PoppinsExtraBold'), url('../../../public/fonts/Poppins-ExtraBold.ttf');
-  font-weight: 700;
+  font-weight: 800;
   font-display: swap;
 }
