--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,19 +1,22 @@
 @import '../../app/styles/variable';
 
-.container {
+.containerTop {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  width: 100%;
-  font-family: $fonteMedium;
+  width: 70%;
+  font-family: $fonteSemiBold;
+  margin: 0 auto;
+  height: 32px;
 
   p {
     margin: 0;
     color: #9f9f9f;
+    font-size: 12px;
   }
 
   img {
-    width: 30px;
+    width: 20px;
   }
 }
 
@@ -25,4 +28,79 @@
 
 .pinkText {
   color: $rosa;
+}
+
+.containerMiddle {
+  display: flex;
+  justify-content: center;
+  gap: 90px;
+  border-top: 1px solid #f0f0f0;
+  border-bottom: 1px solid #f0f0f0;
+  padding: 10px 0;
+
+  form {
+    position: relative;
+    display: flex;
+    align-items: center;
+    width: 657px;
+  }
+
+  input {
+    background-color: #f6f5f2;
+    height: 48px;
+    width: 100%;
+    padding: 5px 0;
+    border: none;
+    border-radius: 10px;
+    padding-left: 20px;
+    color: #9f9f9f;
+    font-size: 14px;
+    font-family: $fonteMedium;
+  }
+
+  input::placeholder {
+    color: #9f9f9f;
+    font-family: $fonteMedium;
+    font-size: 14px;
+  }
+
+  input:focus {
+    outline: none;
+  }
+
+  button {
+    background-color: #f6f5f2;
+    position: absolute;
+    right: 20px;
+    width: 28px;
+    border: none;
+  }
+
+  button:hover {
+    cursor: pointer;
+  }
+
+  &__icons {
+    width: 17%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.containerBottom {
+  font-family: $fonteSemiBold;
+  display: flex;
+  align-items: center;
+  color: #9f9f9f;
+  justify-content: space-around;
+  height: 40px;
+
+  p {
+    margin: 0;
+  }
+
+  div {
+    display: flex;
+  }
 }
