--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -81,7 +81,7 @@
   }
 
   &__icons {
-    width: 17%;
+    width: 20%;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -102,5 +102,7 @@
 
   div {
     display: flex;
+    align-items: center;
+    gap: 10px;
   }
 }
