--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -4,7 +4,7 @@
   position: relative;
   width: 1440px;
   height: 395px;
-  background-image: linear-gradient(transparent, black);
+  background-image: linear-gradient(transparent, 60%, black);
 
   img {
     position: absolute;
