creating products display/navbar

--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -50,4 +50,12 @@
       }
     }
   }
+
+  &__templates {
+    width: 1280px;
+    margin: 0 auto;
+    margin-top: 20px;
+    display: flex;
+    justify-content: space-between;
+  }
 }
