--- a/src/components/MoreProducts/MoreProducts.module.scss
+++ b/src/components/MoreProducts/MoreProducts.module.scss
@@ -1,20 +1,23 @@
 @import '../../app/styles/variable';
 
 .products {
+  width: 1280px;
+  margin: 0 auto;
+
   &__title {
     position: relative;
-    margin-top: 70px;
+    margin-top: 80px;
 
     div {
       border-top: 1px solid #dedede;
       z-index: -1;
       width: 80%;
       margin: 0 auto;
+      text-align: center;
     }
 
     p {
       color: black;
-      text-align: center;
 
       &:first-child {
         position: absolute;
@@ -30,7 +33,66 @@
 
       &:nth-child(2) {
         margin-top: 25px;
+        margin-left: 60px;
         font-family: $fonteBold;
+      }
+    }
+  }
+
+  &__banners {
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+
+    div {
+      position: relative;
+      width: fit-content;
+      background-image: linear-gradient(transparent, 60%, rgb(0, 0, 0, 0.85));
+      border-radius: 10px;
+      height: 284px;
+
+      img {
+        position: relative;
+        z-index: -1;
+        border-radius: 10px;
+        height: 284px;
+        width: 590px;
+      }
+    }
+
+    article {
+      position: absolute;
+      top: 50px;
+      left: 40px;
+
+      p {
+        color: white;
+        margin: 0;
+
+        &:first-child {
+          font-size: 40px;
+          font-family: $fonteBold;
+        }
+
+        &:nth-child(2) {
+          width: 65%;
+          font-weight: 400;
+          margin-top: 10px;
+          font-size: 16px;
+        }
+      }
+
+      button {
+        background-color: $rosa;
+        color: white;
+        border: none;
+        width: 134.59px;
+        height: 48px;
+        border-radius: 10px;
+        font-weight: 900;
+        font-size: 16px;
+        margin-top: 40px;
+        letter-spacing: 1px;
       }
     }
   }
