--- a/src/components/Brands/Brands.module.scss
+++ b/src/components/Brands/Brands.module.scss
@@ -9,6 +9,8 @@
     color: $rosa;
     font-family: $fonteBold;
     margin: 80px 0;
+    font-size: 30px;
+    margin-left: 50px;
   }
 
   section {
