creating product modal

--- a/src/components/Categories/Categories.module.scss
+++ b/src/components/Categories/Categories.module.scss
@@ -27,6 +27,12 @@
       padding: 30px;
       border-radius: 7px;
       box-shadow: 1px 1px 10px #dbdbdb;
+      transition: 300ms;
+    }
+
+    img:hover {
+      cursor: pointer;
+      transform: scale(1.2);
     }
   }
 }
