--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -105,6 +105,10 @@
         color: white;
         font-family: $fonteSemiBold;
       }
+
+      button:hover {
+        cursor: pointer;
+      }
     }
   }
 
