--- a/src/components/MoreProducts/MoreProducts.module.scss
+++ b/src/components/MoreProducts/MoreProducts.module.scss
@@ -94,6 +94,10 @@
         margin-top: 40px;
         letter-spacing: 1px;
       }
+
+      button:hover {
+        cursor: pointer;
+      }
     }
   }
 }
