--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -86,6 +86,10 @@
     align-items: center;
     justify-content: space-between;
   }
+
+  &__icons:hover {
+    cursor: pointer;
+  }
 }
 
 .containerBottom {
@@ -98,6 +102,10 @@
 
   p {
     margin: 0;
+  }
+
+  p:hover {
+    cursor: pointer;
   }
 
   div {
